# red-tensor

./: .gitignore  CMakeLists.txt  flake.nix
experiments/: check_gpu.cpp  vector_add.cpp
include/blas/: math.hpp
include/blas/kernels/: lds.hpp
include/ml/: GPUArray.hpp  math.hpp  memory.hpp
include/ml/kernels/: naive.hpp
src/blas/: math.cpp
src/blas/kernels/: lds.hip
src/ml/: math.cpp  memory.hip
src/ml/kernels/: naive.hip
tests/common/: math.hpp
